// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem styles should render with default styles and match the snapshot 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #9DA7B1;
}

@media (hover:hover) {
  .circuit-0:hover {
    color: #D8DDE1;
  }
}

.circuit-0:active {
  color: #FAFBFC;
  font-weight: bold;
}

<li
  className="circuit-0 circuit-1"
  onClick={[MockFunction]}
  selected={false}
/>
`;

exports[`NavItem styles should render with selected state styles and match the snapshot 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #9DA7B1;
  color: #FAFBFC;
  font-weight: bold;
}

@media (hover:hover) {

}

.circuit-0:active {
  color: #FAFBFC;
  font-weight: bold;
}

<li
  className="circuit-0 circuit-1"
  onClick={[MockFunction]}
  selected={true}
/>
`;
